# foot_sentiment_analysis

./: .gitignore  README.md  pyproject.toml  setup.cfg
foot_sa_etl/: pyproject.toml  scrappe_epl_news.ipynb  setup.cfg  setup.py
foot_sa_etl/foot_sa_etl/: data_model.dbml  definitions.py  scrapper_config.json
foot_sa_etl/foot_sa_etl/assets/: __init__.py
foot_sa_etl/foot_sa_etl/assets/bronze_assets/: __init__.py  epl_team_name.json  scrappe_epl_news.py  scrapper_config.json
foot_sa_etl/foot_sa_etl/assets/gold_assets/: article.py  dim_article.py  dim_date.py  dim_sentiment.py  dim_team.py  dim_type.py  reaction.py  test.ipynb
foot_sa_etl/foot_sa_etl/assets/gold_assets/dim_assets/: dim_article.py  dim_date.py  dim_sentiment.py  dim_team.py  dim_type.py
foot_sa_etl/foot_sa_etl/assets/gold_assets/fact_assets/: __init__.py  fact_reaction.py  fact_sentiment_trend.py  fact_title.py
foot_sa_etl/foot_sa_etl/assets/silver_assets/: process_raw_epl_news.ipynb  process_raw_epl_news.py
foot_sa_etl/foot_sa_etl/utils/: azure_blob_utils.py  common_helpers.py
utils/: azure_blob_utils.py  common_helpers.py  config.py
visualization/: AzureBlobLoader.py  DataTransformer.py  draft_dashboard.drawio  main.py  test.ipynb
