[project]
name = "foot-sentiment-analysis"
version = "0.1.0"
description = "Media sentiment analysis project on the Premier League using data from BBC Sports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "requests==2.32.3",
    "polars>=1.16.2",
    "taipy>=3.1.1",
    "beautifulsoup4==4.12.3",
    "azure-storage-blob>=12.23.1",
    "dagster>=1.8.9",
    "dagster-webserver==1.8.9",
    "matplotlib>=3.9.2",
    "tweepy==4.14.0",
    "library>=0.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.10.8",
    "great-tables>=0.12.0",
    "pattern>=0.0.1a0",
]
